--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Recommender System</title>
+  <!-- Cargamos angular -->
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.0ca8a5bce478afbf248b.css"></head>
+<link rel="stylesheet" href="styles.98dbee6e5d97e9053a69.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.baba03f9d3f8238f0cb2.js" type="module"></script><script src="runtime-es5.baba03f9d3f8238f0cb2.js" nomodule defer></script><script src="polyfills-es5.49c2741e7d3692307941.js" nomodule defer></script><script src="polyfills-es2015.577d5e6a01962d8ccbb6.js" type="module"></script><script src="main-es2015.232d34414ff1a9c09671.js" type="module"></script><script src="main-es5.232d34414ff1a9c09671.js" nomodule defer></script></body>
+<script src="runtime-es2015.078dd2321158eb2b1cc7.js" type="module"></script><script src="runtime-es5.078dd2321158eb2b1cc7.js" nomodule defer></script><script src="polyfills-es5.785de9bca2e8ffd6a87a.js" nomodule defer></script><script src="polyfills-es2015.0768a27f579e57ef154c.js" type="module"></script><script src="main-es2015.173bd0187464d5480e2c.js" type="module"></script><script src="main-es5.173bd0187464d5480e2c.js" nomodule defer></script></body>
 </html>
+
